helm/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
spec:
  tls:
    - secretName: melvinmuljono-tk-tls
      hosts:
        - www.melvinmuljono.tk
  ingressClassName: nginx
  rules:
    - host: www.melvinmuljono.tk
      http:
        paths:
          - backend:
              service:
                name: app-custom
                port:
                  number: 80
            path: /
            pathType: Prefix
